Update Google Maps link in index.html

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         <span>📞 +91 88956 11759</span>
         <span>⏰ Lunch: 12:30 PM | Dinner: 8:00 PM | 🛑 Sun Closed</span>
     </div>
-    <a href="https://maps.google.com" target="_blank" class="map-btn">📍 Open Google Maps</a>
+    <a href="Https://maps.app.goo.gl/N1HNJaMdtbkgMShw6?g_st=aw" target="_blank" class="map-btn">📍 Open Google Maps</a>
     <div class="copyright">© 2026 Home Cooked Food Cuttack. All Rights Reserved.</div>
 </footer>
 
