Update review images and texts in index.html

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         /* REVIEWS SECTION */
         .reviews-wrapper { overflow: hidden; padding: 30px 0; background: #fff; }
-        .reviews-scroll { display: flex; gap: 20px; animation: reviewScroll 50s linear infinite; width: max-content; }
+        .reviews-scroll { display: flex; gap: 20px; animation: reviewScroll 65s linear infinite; width: max-content; }
         @keyframes reviewScroll { 0% { transform: translateX(0); } 100% { transform: translateX(-50%); } }
         .review-card { width: 280px; background: #fff; padding: 15px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.05); flex-shrink: 0; border: 1px solid #eee; text-align: center; }
         .review-img { width: 100%; height: 230px; object-fit: cover; border-radius: 15px; margin-bottom: 12px; background: #f0f0f0; }
@@ -288,34 +288,76 @@
 <div class="reviews-wrapper">
     <div class="reviews-scroll">
         <div class="review-card">
-            <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?w=400&h=300&fit=crop" class="review-img">
+            <img src="https://i.ibb.co/VWsNPzzN/image.jpg" class="review-img">
             <div class="stars">⭐⭐⭐⭐⭐</div>
-            <span class="review-text">"ମଣ୍ଡେ ର ଡାଲମା ପୁରା ଘର ଭଳି ସ୍ୱାଦ। ବହୁତ ବଢିଆ ହେଇଥିଲା।"</span>
+            <span class="review-text">"Excellent delivery service in Cuttack. Always punctual and professional."</span>
             <span class="reviewer-name">Soumya Ranjan Das</span>
         </div>
         <div class="review-card">
-            <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?w=400&h=300&fit=crop" class="review-img">
+            <img src="https://i.ibb.co/PvtqMrvb/image.jpg" class="review-img">
             <div class="stars">⭐⭐⭐⭐⭐</div>
-            <span class="review-text">"ପନିର ତରକାରୀ ପୁରା ସଫ୍ଟ ଥିଲା, ମସଲା ବି ବହୁତ କମ।"</span>
+            <span class="review-text">"The packaging is very neat and hygienic. Impressed with the overall service quality."</span>
             <span class="reviewer-name">Subhalaxmi Sahoo</span>
         </div>
         <div class="review-card">
-            <img src="https://images.unsplash.com/photo-1567306301498-519dde99a796?w=400&h=300&fit=crop" class="review-img">
+            <img src="https://i.ibb.co/dJmT23nJ/image.jpg" class="review-img">
             <div class="stars">⭐⭐⭐⭐⭐</div>
-            <span class="review-text">"ମାଛ ତରକାରୀ ର ଝୋଳ ପୁରା ଦେଶୀ ଷ୍ଟାଇଲ। ଖାଇକି ମଜା ଆସିଗଲା।"</span>
+            <span class="review-text">"Quick response on WhatsApp and very polite delivery staff. Highly reliable."</span>
             <span class="reviewer-name">Biswajit Mohanty</span>
         </div>
         <div class="review-card">
-            <img src="https://images.unsplash.com/photo-1633945274405-b6c8069047b0?w=400&h=300&fit=crop" class="review-img">
+            <img src="https://i.ibb.co/mFGLL7fz/image.jpg" class="review-img">
             <div class="stars">⭐⭐⭐⭐⭐</div>
-            <span class="review-text">"ଏଗ୍ ତଡକା ଆଉ ରୁଟି ର କୋମ୍ବୋ ସବୁଠୁ ବେଷ୍ଟ।"</span>
+            <span class="review-text">"Best subscription service for students. Never missed a meal, very consistent."</span>
             <span class="reviewer-name">Priyanka Priyadarshini</span>
         </div>
         <div class="review-card">
-            <img src="https://images.unsplash.com/photo-1596797038558-b11911a4d46c?w=400&h=300&fit=crop" class="review-img">
+            <img src="https://i.ibb.co/SDvzyG2k/image.jpg" class="review-img">
             <div class="stars">⭐⭐⭐⭐⭐</div>
-            <span class="review-text">"ବେସର ଆଉ ଶାଗ ମୁଗ ପୁରା ଅଥେଣ୍ଟିକ ଓଡ଼ିଆ ସ୍ୱାଦ।"</span>
+            <span class="review-text">"Professional management and timely delivery. The service is truly top-notch."</span>
             <span class="reviewer-name">Rashmi Rekha</span>
+        </div>
+        <div class="review-card">
+            <img src="https://i.ibb.co/5xC4zt8M/image.jpg" class="review-img">
+            <div class="stars">⭐⭐⭐⭐⭐</div>
+            <span class="review-text">"Very satisfied with the cleanliness and hygienic food handling practices."</span>
+            <span class="reviewer-name">Anshuman Mohapatra</span>
+        </div>
+        <div class="review-card">
+            <img src="https://i.ibb.co/chd7s74f/image.jpg" class="review-img">
+            <div class="stars">⭐⭐⭐⭐⭐</div>
+            <span class="review-text">"Great value for money service. Delivery is always on point every day."</span>
+            <span class="reviewer-name">Rakesh Jena</span>
+        </div>
+        <div class="review-card">
+            <img src="https://i.ibb.co/SXhJWbvB/image.jpg" class="review-img">
+            <div class="stars">⭐⭐⭐⭐⭐</div>
+            <span class="review-text">"Reliable and professional home delivery. Best service experience in town."</span>
+            <span class="reviewer-name">Deepak Sahoo</span>
+        </div>
+        <div class="review-card">
+            <img src="https://i.ibb.co/rRPVgZ22/image.jpg" class="review-img">
+            <div class="stars">⭐⭐⭐⭐⭐</div>
+            <span class="review-text">"Highly professional staff and very easy ordering process. 5-star service!"</span>
+            <span class="reviewer-name">Rahul Mohanty</span>
+        </div>
+        <div class="review-card">
+            <img src="https://i.ibb.co/HTYFSsJw/image.jpg" class="review-img">
+            <div class="stars">⭐⭐⭐⭐⭐</div>
+            <span class="review-text">"Impeccable hygiene standards. The delivery person was very courteous."</span>
+            <span class="reviewer-name">Sonalika Rout</span>
+        </div>
+        <div class="review-card">
+            <img src="https://i.ibb.co/zWptrzN2/image.jpg" class="review-img">
+            <div class="stars">⭐⭐⭐⭐⭐</div>
+            <span class="review-text">"Excellent timing! They ensure you get your lunch right at the peak time."</span>
+            <span class="reviewer-name">Tushar Kanta</span>
+        </div>
+        <div class="review-card">
+            <img src="https://i.ibb.co/rfqtt35j/image.jpg" class="review-img">
+            <div class="stars">⭐⭐⭐⭐⭐</div>
+            <span class="review-text">"Very organized and professional. Best food delivery management in Cuttack."</span>
+            <span class="reviewer-name">Sujata Behera</span>
         </div>
     </div>
 </div>
@@ -338,7 +380,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/600px-Instagram_icon.png" alt="Insta" style="width: 28px; height: 28px;">
             <div style="text-align: left;">
                 <span style="display: block; font-size: 13px; font-weight: 800; color: var(--black); line-height: 1.2;">@home.cookedfood1</span>
-                <span style="display: block; font-size: 10px; color: #888; font-weight: 600;">Followers Special Offers</span>
+                <span style="display: block; font-size: 10px; color: #888; font-weight: 600;">Follow Us On Instagram</span>
             </div>
         </div>
     </a>
